@@ -16,6 +16,8 @@ Bugs:
 Refactorings:
 - ALL: Generalise class totals towards a class Amount (split into part amount and part
   VAT) allowing to retrieve its separate parts and which parts were calculated.
+- PS: extracted payment fee handling into a separate class that adds support for 3rd
+  party modules.
 
 
 8.6.4 (2025-10-15) (PS)
